--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -38,7 +38,7 @@
         {% include home-network-links.html %}
       </div>
       <div class="center aligned content">
-        <a href="{{ site.baseurl}}/Blog/">
+        <a href="{{ site.baseurl}}/blog/">
           <button class="ui basic button">Blog</button>
         </a>
       </div>
